--- a/cli/linux/webserver/public/index.html
+++ b/cli/linux/webserver/public/index.html
@@ -63,14 +63,14 @@
                         <div class="row mb-4">
                             <div class="col">
                                 <div class="capture-camera-inner">
-                                    <img style="height: 480px">
+                                    <img style="min-height: 480px">
                                 </div>
                             </div>
                         </div>
                         <div class="row mt-2" id="image-classification-conclusion">
                             <h2 class="col"></h2>
                         </div>
-                        <div class="row mt-2">
+                        <div class="row mt-2" id="time-per-inference-container" style="display: none">
                             <div class="col text-xs">Time per inference: <span id="time-per-inference"></span> ms.</div>
                         </div>
                     </div>
