--- a/cli/linux/webserver/public/index.html
+++ b/cli/linux/webserver/public/index.html
@@ -73,6 +73,9 @@
                         <div class="row mt-2" id="time-per-inference-container" style="display: none">
                             <div class="col text-xs">Time per inference: <span id="time-per-inference"></span> ms.</div>
                         </div>
+                        <div class="row mt-2" id="additional-info-container" style="white-space: pre-wrap; display: none">
+                            <div class="col text-xs"><span id="additional-info"></span></div>
+                        </div>
                     </div>
                 </div>
             </div>
